# user-registration

./: .gitignore  ARCHITECTURE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  db.py  main.py  security.py
app/api/routes/: users.py
app/api/schemas/: common.py  user.py
app/core/: config.py  security.py  utils.py
app/data/: db.py
app/data/models/: user.py
app/data/repositories/: user_repository.py
app/services/: activation.py  mailer.py  user_service.py
docker/: docker-compose.yml
tests/: conftest.py  test_activation.py  test_registration.py  test_user_service.py
